syntax = "proto3";

option java_multiple_files = true;
package communication;
import "model.proto";

service rateService {
  rpc rateHost(Rate) returns (MessageResponse);
  rpc changeRate(Rate) returns (Rate);
  rpc deleteRate(UserIdRequest) returns (Rate);
}